syntax = "proto2";
package sideswap.proto;

message Empty {
}

message Account {
  required int32 id = 1;
}

message Address {
  required string addr = 1;
}

message AddressAmount {
  required string address = 1;
  required int64 amount = 2;
  required string asset_id = 3;
  optional bool is_greedy = 4;
}

message Balance {
  required string asset_id = 1;
  required int64 amount = 2;
}

message AmpAssetRestrictions {
  repeated string allowed_countries = 1;
}

message Asset {
  required string asset_id = 1;
  required string name = 2;
  required string ticker = 3;
  required string icon = 4;
  required uint32 precision = 5;
  required bool instant_swaps = 11;
  required bool swap_market = 6;
  required bool amp_market = 9;
  required bool unregistered = 8;
  optional string domain = 7;
  optional string domain_agent = 10;
  optional string domain_agent_link = 13;
  optional bool always_show = 12;
  optional AmpAssetRestrictions amp_asset_restrictions = 14;
}

message Tx {
  repeated Balance balances = 1;
  required string txid = 2;
  required int64 network_fee = 3;
  required int64 size = 5;
  required int64 vsize = 6;
  required string memo = 4;
  repeated Balance balances_all = 7;
}

message Peg {
  required bool is_peg_in = 1;
  required int64 amount_send = 2;
  required int64 amount_recv = 3;
  required string addr_send = 4;
  required string addr_recv = 5;
  required string txid_send = 6;
  optional string txid_recv = 8;
}

message Confs {
  required uint32 count = 1;
  required uint32 total = 2;
}

message TransItem {
  required string id = 1;
  required int64 created_at = 2;
  optional Confs confs = 3;
  required Account account = 4;

  oneof item {
    Tx tx = 10;
    Peg peg = 11;
  }
}

message AssetId {
  required string asset_id = 1;
}

message GenericResponse {
  required bool success = 1;
  optional string error_msg = 2;
}

message FeeRate {
  required int32 blocks = 1;
  required double value = 2;
}

message ServerStatus {
  required int64 min_peg_in_amount = 1;
  required int64 min_peg_out_amount = 2;
  required double server_fee_percent_peg_in = 3;
  required double server_fee_percent_peg_out = 4;
  repeated FeeRate bitcoin_fee_rates = 5;
}

message UploadContact {
  required string identifier = 1;
  required string name = 2;
  repeated string phones = 3;
}

message Contact {
  required string contact_key = 1;
  required string name = 2;
  required string phone = 3;
}

message ContactTransaction {
  required string txid = 1;
  required string contact_key = 2;
}

message Order {
  required string order_id = 1;
  required string asset_id = 2;
  required int64 bitcoin_amount = 3;
  required bool send_bitcoins = 10;
  required int64 server_fee = 4;
  required int64 asset_amount = 5;
  required double price = 6;
  required int64 created_at = 7;
  optional int64 expires_at = 8;
  required bool private = 9;
  required bool two_step = 17;
  required bool auto_sign = 11;
  required bool own = 12;
  required bool token_market = 16;
  required bool from_notification = 13;
  optional double index_price = 15;
}

message SwapDetails {
  required string order_id = 1;
  required string send_asset = 2;
  required string recv_asset = 3;
  required int64 send_amount = 4;
  required int64 recv_amount = 5;
  required string upload_url = 6;
}

message OutPoint {
  required string txid = 1;
  required uint32 vout = 2;
}

message CreateTx {
  repeated AddressAmount addressees = 1;
  required Account account = 2;
  repeated OutPoint utxos = 3;
}

message CreatedTx {
  required CreateTx req = 1;
  required int32 input_count = 2;
  required int32 output_count = 3;
  required int64 size = 4;
  required int64 vsize = 7;
  required int64 network_fee = 5;
  required double fee_per_byte = 6;
  repeated AddressAmount addressees = 8;
}

message CreatePayjoin {
  required Account account = 1;
  required string addr = 2;
  required Balance balance = 3;
}

message CreatedPayjoin {
  required CreatePayjoin req = 1;
  required string pset = 2;
  required int64 asset_fee = 3;
}

message ChartPoint {
  required string time = 1;
  required double open = 2;
  required double close = 3;
  required double high = 4;
  required double low = 5;
  required double volume = 6;
}

message To {
  message Login {
    oneof wallet {
      string mnemonic = 1;
      string jade_id = 7;
    }
    optional string phone_key = 2;
    optional bool send_utxo_updates = 6;
    optional bool force_auto_sign_maker = 8;
  }

  message NetworkSettings {
    message Custom {
      required string host = 1;
      required int32 port = 2;
      required bool use_tls = 3;
    }

    oneof selected {
      Empty blockstream = 1;
      Empty sideswap = 2;
      Empty sideswap_cn = 3;
      Custom custom = 4;
    }
  }

  message ProxySettings {
    message Proxy {
      required string host = 1;
      required int32 port = 2;
    }

    optional Proxy proxy = 1;
  }

  message EncryptPin {
    required string pin = 1;
    required string mnemonic = 2;
  }

  message DecryptPin {
    required string pin = 1;
    required string salt = 2;
    required string encrypted_data = 3;
    required string pin_identifier = 4;
  }

  message AppState {
    required bool active = 1;
  }

  message SwapRequest {
    required bool send_bitcoins = 1;
    required string asset = 2;
    required int64 send_amount = 3;
    required int64 recv_amount = 4;
    required double price = 5;
  }

  message PegInRequest {
  }

  message PegOutAmount {
    required int64 amount = 1;
    required bool is_send_entered = 2;
    required double fee_rate = 3;
    required Account account = 4;
  }

  message PegOutRequest {
    required int64 send_amount = 1;
    required int64 recv_amount = 2;
    required bool is_send_entered = 4;
    required double fee_rate = 5;
    required string recv_addr = 6;
    required int32 blocks = 7;
    required Account account = 8;
  }

  message SetMemo {
    required Account account = 1;
    required string txid = 2;
    required string memo = 3;
  }

  message SendTx {
    required Account account = 1;
  }

  message BlindedValues {
    required string txid = 1;
  }

  message UpdatePushToken {
    required string token = 1;
  }

  message RegisterPhone {
    required string number = 1;
  }

  message VerifyPhone {
    required string phone_key = 1;
    required string code = 2;
  }

  message UnregisterPhone {
    required string phone_key = 1;
  }

  message UploadAvatar {
    required string phone_key = 1;
    required string image = 2;
  }

  message UploadContacts {
    required string phone_key = 1;
    repeated UploadContact contacts = 2;
  }

  message SubmitOrder {
    required Account account = 7;
    required string asset_id = 2;
    optional double bitcoin_amount = 3;
    optional double asset_amount = 4;
    required double price = 5;
    optional double index_price = 6;
  }

  message LinkOrder {
    required string order_id = 1;
  }

  message SubmitDecision {
    required string order_id = 1;
    required bool accept = 2;
    optional bool auto_sign = 3;
    optional bool private = 4;
    optional bool two_step = 6;
    optional uint64 ttl_seconds = 5;
    optional bool tx_chaining_allowed = 7;
    optional bool only_unused_utxos = 8;
  }

  message EditOrder {
    required string order_id = 1;
    oneof data {
      double price = 2;
      double index_price = 3;
      bool auto_sign = 4;
    }
  }

  message CancelOrder {
    required string order_id = 1;
  }

  message Subscribe {
    message Market {
      required string asset_id = 1;
    }
    repeated Market markets = 1;
  }

  message SubscribePriceStream {
    required string asset_id = 1;
    required bool send_bitcoins = 2;
    optional int64 send_amount = 3;
    optional int64 recv_amount = 4;
  }

  message MarketDataSubscribe {
    required string asset_id = 1;
  }

  message GaidStatus {
    required string gaid = 1;
    required string asset_id = 2;
  }

  oneof msg {
    Login login = 1;
    Empty logout = 2;
    NetworkSettings network_settings = 9;
    ProxySettings proxy_settings = 7;
    UpdatePushToken update_push_token = 3;
    EncryptPin encrypt_pin = 4;
    DecryptPin decrypt_pin = 5;
    string push_message = 6;
    AppState app_state = 8;

    SetMemo set_memo = 10;
    Account get_recv_address = 11;
    CreateTx create_tx = 12;
    SendTx send_tx = 13;
    CreatePayjoin create_payjoin = 15;
    CreatedPayjoin send_payjoin = 16;
    BlindedValues blinded_values = 14;
    Account load_utxos = 17;
    Account load_addresses = 18;

    SwapRequest swap_request = 20;
    PegInRequest peg_in_request = 21;
    PegOutAmount peg_out_amount = 24;
    PegOutRequest peg_out_request = 22;
    SwapDetails swap_accept = 23;

    RegisterPhone register_phone = 40;
    VerifyPhone verify_phone = 41;
    UnregisterPhone unregister_phone = 44;
    UploadAvatar upload_avatar = 42;
    UploadContacts upload_contacts = 43;

    SubmitOrder submit_order = 49;
    LinkOrder link_order = 50;
    SubmitDecision submit_decision = 51;
    EditOrder edit_order = 52;
    CancelOrder cancel_order = 53;
    Subscribe subscribe = 54;
    AssetId asset_details = 57;
    AssetId subscribe_price = 55;
    AssetId unsubscribe_price = 56;
    SubscribePriceStream subscribe_price_stream = 58;
    Empty unsubscribe_price_stream = 59;

    MarketDataSubscribe market_data_subscribe = 60;
    Empty market_data_unsubscribe = 61;
    Empty portfolio_prices = 62;
    Empty conversion_rates = 63;

    Empty jade_rescan = 71;

    GaidStatus gaid_status = 81;
  }
}

message From {
  message Login {
    oneof result {
      string error_msg = 1;
      Empty success = 2;
    }
  }

  message EnvSettings {
    required string policy_asset_id = 1;
    required string usdt_asset_id = 2;
    required string eurx_asset_id = 3;
  }

  message EncryptPin {
    message Data {
      required string salt = 2;
      required string encrypted_data = 3;
      required string pin_identifier = 4;
    }
    oneof result {
      string error = 1;
      Data data = 2;
    }
  }

  message DecryptPin {
    oneof result {
      string error = 1;
      string mnemonic = 2;
    }
  }

  message RegisterAmp {
    oneof result {
      string amp_id = 1;
      string error_msg = 2;
    }
  }

  message AmpAssets {
    repeated string assets = 1;
  }

  message TokenMarketOrder {
    repeated string asset_ids = 1;
  }

  message UpdatedTxs {
    repeated TransItem items = 1;
  }

  message RemovedTxs {
    repeated string txids = 1;
  }

  message UpdatedPegs {
    required string order_id = 1;
    repeated TransItem items = 2;
  }

  message BalanceUpdate {
    required Account account = 1;
    repeated Balance balances = 2;
  }

  message UtxoUpdate {
    message Utxo {
      required string txid = 1;
      required uint32 vout = 2;
      required string asset_id = 3;
      required uint64 amount = 4;
    }
    required Account account = 1;
    repeated Utxo utxos = 2;
  }

  message PeginWaitTx {
    required string peg_addr = 5;
    required string recv_addr = 6;
  }

  message PegOutAmount {
    message Amounts {
      required int64 send_amount = 1;
      required int64 recv_amount = 2;
      required bool is_send_entered = 4;
      required double fee_rate = 5;
      required Account account = 6;
    }

    oneof result {
      string error_msg = 1;
      Amounts amounts = 2;
    }
  }

  message RecvAddress {
    required Address addr = 1;
    required Account account = 2;
  }

  message LoadUtxos {
    message Utxo {
      required string txid = 1;
      required uint32 vout = 2;
      required string asset_id = 3;
      required uint64 amount = 4;
      required string address = 5;
      required bool is_internal = 6;
      required bool is_confidential = 7;
    }

    required Account account = 1;
    repeated Utxo utxos = 2;
    optional string error_msg = 3;
  }

  message LoadAddresses {
    message Address {
      required string address = 1;
      required string unconfidential_address = 4;
      required uint32 index = 2;
      required bool is_internal = 3;
    }

    required Account account = 1;
    repeated Address addresses = 2;
    optional string error_msg = 3;
  }

  message CreateTxResult {
    oneof result {
      string error_msg = 1;
      CreatedTx created_tx = 2;
    }
  }

  message CreatePayjoinResult {
    oneof result {
      string error_msg = 1;
      CreatedPayjoin created_payjoin = 2;
    }
  }

  message SendResult {
    oneof result {
      string error_msg = 1;
      TransItem tx_item = 2;
    }
  }

  message BlindedValues {
    required string txid = 1;
    oneof result {
      string error_msg = 2;
      string blinded_values = 3;
    }
  }

  message PriceUpdate {
    required string asset = 1;
    required double bid = 2;
    required double ask = 3;
  }

  message RegisterPhone {
    oneof result {
      string phone_key = 1;
      string error_msg = 2;
    }
  }

  message VerifyPhone {
    oneof result {
      Empty success = 1;
      string error_msg = 2;
    }
  }

  message ShowMessage {
    required string text = 1;
  }

  message ShowInsufficientFunds {
    required string asset_id = 1;
    required int64 available = 2;
    required int64 required = 3;
  }

  message SubmitReview {
    enum Step {
      SUBMIT = 1;
      QUOTE = 2;
      SIGN = 3;
    }

    required string order_id = 1;
    required string asset = 2;
    required int64 bitcoin_amount = 3;
    required int64 server_fee = 8;
    required int64 asset_amount = 4;
    required double price = 5;
    required bool sell_bitcoin = 6;
    required Step step = 7;
    required bool index_price = 9;
    required bool auto_sign = 11;
    optional bool two_step = 12;
    optional bool tx_chaining_required = 13;
  }

  message SubmitResult {
    message UnregisteredGaid {
      required string domain_agent = 1;
    }

    oneof result {
      Empty submit_succeed = 1;
      TransItem swap_succeed = 2;
      string error = 3;
      UnregisteredGaid unregistered_gaid = 4;
    }
  }

  message StartTimer {
    required string order_id = 1;
  }

  message OrderCreated {
    required Order order = 1;
    required bool new = 2;
  }

  message OrderRemoved {
    required string order_id = 1;
  }

  message OrderComplete {
    required string order_id = 1;
    optional string txid = 2;
  }

  message IndexPrice {
    required string asset_id = 1;
    optional double ind = 2;
    optional double last = 3;
  }

  message ContactRemoved {
    required string contact_key = 1;
  }

  message AccountStatus {
    required bool registered = 1;
  }

  message AssetDetails {
    message Stats {
      required int64 issued_amount = 1;
      required int64 burned_amount = 2;
      required int64 offline_amount = 4;
      required bool has_blinded_issuances = 3;
    }
    message ChartStats {
      required double low = 1;
      required double high = 2;
      required double last = 3;
    }
    required string asset_id = 1;
    optional Stats stats = 2;
    optional string chart_url = 3;
    optional ChartStats chart_stats = 4;
  }

  message UpdatePriceStream {
    required string asset_id = 1;
    required bool send_bitcoins = 2;
    optional int64 send_amount = 3;
    optional int64 recv_amount = 4;
    optional double price = 5;
    optional string error_msg = 6;
  }

  message LocalMessage {
    required string title = 1;
    required string body = 2;
  }

  message MarketDataSubscribe {
    required string asset_id = 1;
    repeated ChartPoint data = 2;
  }

  message MarketDataUpdate {
    required string asset_id = 1;
    required ChartPoint update = 2;
  }

  message PortfolioPrices {
    map<string, double> prices_usd = 1;
  }

  message ConversionRates {
    map<string, double> usd_conversion_rates = 1;
  }

  message JadePorts {
    message Port {
      required string jade_id = 1;
      required string port = 2;
    }

    repeated Port ports = 1;
  }

  message JadeStatus {
    enum Status {
      IDLE = 1;
      READ_STATUS = 2;
      AUTH_USER = 3;
      MASTER_BLINDING_KEY = 5;

      SIGN_TX = 4;
      SIGN_SWAP = 8;
      SIGN_SWAP_OUTPUT = 6;
      SIGN_OFFLINE_SWAP = 7;
    }
    required Status status = 1;
  }

  message GaidStatus {
    required string gaid = 1;
    required string asset_id = 2;
    optional string error = 3;
  }

  oneof msg {
    Login login = 17;
    Empty logout = 16;
    EnvSettings env_settings = 13;
    RegisterAmp register_amp = 8;
    UpdatedTxs updated_txs = 1;
    RemovedTxs removed_txs = 12;
    UpdatedPegs updated_pegs = 2;
    Asset new_asset = 3;
    AmpAssets amp_assets = 9;
    TokenMarketOrder token_market_order = 18;
    BalanceUpdate balance_update = 4;
    UtxoUpdate utxo_update = 15;
    ServerStatus server_status = 5;
    PriceUpdate price_update = 6;
    Empty wallet_loaded = 7;
    Empty sync_complete = 14;

    EncryptPin encrypt_pin = 10;
    DecryptPin decrypt_pin = 11;

    PeginWaitTx pegin_wait_tx = 21;
    PegOutAmount peg_out_amount = 24;
    TransItem swap_succeed = 22;
    string swap_failed = 23;

    RecvAddress recv_address = 30;
    CreateTxResult create_tx_result = 31;
    CreatePayjoinResult create_payjoin_result = 34;
    SendResult send_result = 32;
    BlindedValues blinded_values = 33;
    LoadUtxos load_utxos = 35;
    LoadAddresses load_addresses = 36;

    RegisterPhone register_phone = 40;
    VerifyPhone verify_phone = 41;
    GenericResponse upload_avatar = 42;
    GenericResponse upload_contacts = 43;
    Contact contact_created = 44;
    ContactRemoved contact_removed = 45;
    ContactTransaction contact_transaction = 46;
    AccountStatus account_status = 47;

    ShowMessage show_message = 50;
    ShowInsufficientFunds insufficient_funds = 55;
    SubmitReview submit_review = 51;
    SubmitResult submit_result = 52;
    GenericResponse edit_order = 53;
    GenericResponse cancel_order = 54;
    StartTimer start_timer = 56;

    Empty server_connected = 60;
    Empty server_disconnected = 61;
    OrderCreated order_created = 62;
    OrderRemoved order_removed = 63;
    OrderComplete order_complete = 67;
    IndexPrice index_price = 64;
    AssetDetails asset_details = 65;

    UpdatePriceStream update_price_stream = 66;
    LocalMessage local_message = 68;

    MarketDataSubscribe market_data_subscribe = 70;
    MarketDataUpdate market_data_update = 71;
    PortfolioPrices portfolio_prices = 72;
    ConversionRates conversion_rates = 73;

    JadePorts jade_ports = 80;
    JadeStatus jade_status = 83;

    GaidStatus gaid_status = 91;
  }
}

message Settings {
  message AccountAsset {
    required Account account = 1;
    required string asset_id = 2;
  }

  repeated AccountAsset disabled_accounts = 1;
}
